added example slide deck

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,8 +1,8 @@
 project:
   type: website
   output-dir: docs
-#  resources: 
-#      - materials
+  resources: 
+      - examples
 
 website:
   page-navigation: true
